# panda_prosthesis_yhadj

./: .envrc  .gitignore  .nvim.lua  .pre-commit-config.yaml  CMakeLists.txt  README-NIX.md  imgui.ini  setup_local.sh
.env-scripts/: cmake_local
data/trajectories/bonetag/: SE3_femur.csv  SE3_femur_tibia.csv  SE3_femur_v3.csv  SE3_tibia.csv  movement.csv
scripts/: run_bonetag_controller_real.in.sh
src/: CMakeLists.txt
src/bonetag/: BoneTagSerial.cpp  BoneTagSerialPlugin.cpp  BoneTagSerialPlugin.h  CMakeLists.txt  ProtoTMRSerial.cpp  ProtoTMRSerial.h  Serial.h
src/bonetag/etc/: BoneTagSerialPlugin.yaml
src/controller/: CMakeLists.txt  PandaProsthesisController.cpp
src/controller/etc/: PandaProsthesis.in.yaml  initial_panda_femur.yaml  initial_panda_tibia.yaml  mc_rtc.in.yaml  mc_rtc.yaml
src/controller/etc/bonetag_panda/: initial_Panda2LIRMMDefault::BoneTag::Femur.yaml  initial_Panda2LIRMMDefault::TAA::Tibia.yaml  initial_Panda2LIRMMDefault::TSA::Humerus.yaml  initial_Panda2LIRMM_2::Default::BoneTag::Femur.yaml  initial_Panda7LIRMMDefault::TAA::Talar.yaml  initial_Panda7LIRMMDefault::TSA::Humerus.yaml  initial_Panda7LIRMM_2::Default::BoneTag::Tibia.yaml  initial_panda_femur.yaml  initial_panda_tibia.yaml
src/controller/etc/bonetag_ur10/: initial_panda_femur.yaml  initial_panda_tibia.yaml
src/controller/include/: utils.h
src/controller/states/: AttachKnee.cpp  AttachKnee.h  CMakeLists.txt  Calibrate.cpp  Calibrate.h  Choice.h  ChooseMode.cpp  ConnectRobots.cpp  ConnectRobots.h  Initial.cpp  Initial.h  ManipulateKnee.cpp  ManipulateKnee.h  SaveCalibration.cpp
src/controller/states/data/: bonetag.yaml
src/module/: CMakeLists.txt  generate_convexes.sh  module.cpp  module.h  panda_brace_module.h
src/module/alias/: bonetag_femur.in.yaml  bonetag_knee_brace.in.yaml  bonetag_tibia.in.yaml  bonetag_tibia_calibration_tool.in.yaml  brace_bottom_setup.in.yaml  brace_urdf.in.yaml  dual_disks.yaml  taa_talar.in.yaml  taa_tibia.in.yaml  tsa_glenoid.in.yaml  tsa_humerus.in.yaml
src/module/convex/bonetag_femur/: femur-ch.txt  support_femur-ch.txt
src/module/convex/bonetag_tibia/: support_tibia-ch.txt  support_tibia_coude-ch.txt  support_tibia_straight-ch.txt  tibia-ch.txt
src/module/meshes/bonetag_femur/: femur.stl  support_femur.stl
src/module/meshes/bonetag_knee_brace/: KneeBrace_v5_origin.stl
src/module/meshes/bonetag_tibia/: calibration_tool.stl  support_tibia.stl  support_tibia_straight.stl  tibia.stl
src/module/meshes/tsa_glenoid/: base_link.stl  glenoid_sphere_1.stl  glenoid_tool_1.stl
src/module/meshes/tsa_humerus/: base_link.stl  stem_1.stl
src/module/rsdf/bonetag_femur/: femur.rsdf
src/module/rsdf/bonetag_tibia/: tibia.rsdf
src/module/rsdf/dual_disks/: dual_disks.rsdf
src/module/urdf/: bonetag_femur.in.urdf  bonetag_knee_brace.in.urdf  bonetag_tibia.in.urdf  bonetag_tibia_calibration_tool.in.urdf  dual_disks.urdf  taa_talar.in.urdf  taa_tibia.in.urdf  tsa_glenoid.in.urdf  tsa_humerus.in.urdf
src/module/yaml/: bonetag_femur.in.yaml  bonetag_knee_brace.in.yaml  bonetag_tibia.in.yaml  bonetag_tibia_calibration_tool.in.yaml  dual_disks.in.yaml  taa_talar.in.yaml  taa_tibia.in.yaml  tsa_glenoid.in.yaml  tsa_humerus.in.yaml
src/plugins/: CMakeLists.txt
src/plugins/ProtoTMR/: CMakeLists.txt  ProtoTMRPlugin.cpp  ProtoTMRPlugin.h  ProtoTMRSerial.cpp  ProtoTMRSerial.h  Serial.h
src/plugins/ProtoTMR/etc/: ProtoTMRPlugin.yaml
src/plugins/bonetag/: BoneTagSerial.cpp  BoneTagSerial.h  BoneTagSerialPlugin.cpp  BoneTagSerialPlugin.h  CMakeLists.txt  Packet.cpp  Packet.hpp  test_bonetag_usb.cpp
src/plugins/bonetag/etc/: BoneTagSerialPlugin.yaml
src/plugins/bonetag/scripts/: reset_bonetag_serial
utils/: extract_sensor_measurements.sh
