add_fsm_state_simple(Initial)
target_include_directories(Initial PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>)
add_fsm_state_simple(AttachKnee)
add_fsm_state_simple(ConnectRobots)
add_fsm_state_simple(ChooseTrajectory)
target_link_libraries(ChooseTrajectory PUBLIC PandaProsthesisCommon)
add_fsm_state_simple(PlayTrajectory)
target_link_libraries(PlayTrajectory PUBLIC PandaProsthesisCommon)
add_fsm_state_simple(GoRelative)
add_fsm_state_simple(ChooseMode)
add_fsm_state_simple(Choice)
add_fsm_state_simple(Calibrate)
target_include_directories(Calibrate PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>)
add_fsm_state_simple(CalibrateRelative)
add_fsm_state_simple(RecordTrajectory)
add_fsm_state_simple(RemoveTool)
add_fsm_state_simple(OffsetCalib)
add_fsm_state_simple(GoInContact)
target_link_libraries(CalibrateRelative PUBLIC state-observation::state-observation)
set_target_properties(CalibrateRelative PROPERTIES INSTALL_RPATH ${MC_STATES_RUNTIME_INSTALL_PREFIX})
add_fsm_state_simple(TransformDatastore)
add_fsm_state_simple(SaveCalibration)
target_include_directories(SaveCalibration PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>)
add_fsm_state_simple(ManipulateKnee)
target_include_directories(ManipulateKnee PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>)

add_fsm_data_directory(data)
